[project]
name = "fibonacci"
version = "1.0"
dependencies = []

[tool.mypy]
strict = true
files = ["."]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "EM101"]
#extend-select = ["E501"]
#select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"test_main.py" = ["PLR2004", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"